--- a/ui_mainwindow.ui
+++ b/ui_mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -43,100 +43,169 @@
        <property name="leftMargin">
         <number>10</number>
        </property>
-       <item row="4" column="1">
-        <widget class="QLabel" name="label_43">
+       <property name="rightMargin">
+        <number>10</number>
+       </property>
+       <item row="5" column="1">
+        <widget class="QLabel" name="label_42">
          <property name="text">
-          <string>TextLabel</string>
+          <string>n.b.</string>
          </property>
         </widget>
        </item>
        <item row="4" column="0">
-        <widget class="QLineEdit" name="lineEdit_17"/>
-       </item>
-       <item row="7" column="1">
-        <widget class="QLabel" name="label_40">
-         <property name="text">
-          <string>TextLabel</string>
+        <widget class="QLineEdit" name="pwmFreq_UEB_status">
+         <property name="readOnly">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
-       <item row="5" column="0">
-        <widget class="QLineEdit" name="lineEdit_18"/>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLineEdit" name="lineEdit_13"/>
-       </item>
-       <item row="1" column="1">
-        <widget class="QLabel" name="label_46">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="1">
-        <widget class="QLabel" name="label_42">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QLineEdit" name="lineEdit_14"/>
-       </item>
-       <item row="8" column="1">
-        <widget class="QLabel" name="label_39">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLineEdit" name="lineEdit_16"/>
-       </item>
-       <item row="6" column="1">
-        <widget class="QLabel" name="label_41">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QLineEdit" name="lineEdit_15"/>
-       </item>
-       <item row="2" column="1">
-        <widget class="QLabel" name="label_45">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QLabel" name="label_47">
-         <property name="text">
-          <string>TextLabel</string>
+       <item row="8" column="0">
+        <widget class="QLineEdit" name="lineEdit_21">
+         <property name="readOnly">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
        <item row="3" column="1">
         <widget class="QLabel" name="label_44">
          <property name="text">
-          <string>TextLabel</string>
+          <string>Softstartdauer (s)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="1" alignment="Qt::AlignRight">
+        <widget class="QPushButton" name="startButton_UEB_status">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="layoutDirection">
+          <enum>Qt::LeftToRight</enum>
+         </property>
+         <property name="text">
+          <string>Motor Start</string>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="1">
+        <widget class="QLabel" name="label_40">
+         <property name="text">
+          <string>n.b.</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QLabel" name="label_45">
+         <property name="text">
+          <string>Ausgangsspannung (V)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLineEdit" name="softstartD_UEB_status">
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLineEdit" name="versorgSp_UEB_status">
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QLabel" name="label_43">
+         <property name="text">
+          <string>PWM Frequenz (Hz)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLabel" name="label_47">
+         <property name="text">
+          <string>Frequenz (Hz)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLineEdit" name="frequenz_UEB_status">
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLineEdit" name="ausgangSp_UEB_status">
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="1">
+        <widget class="QLabel" name="label_41">
+         <property name="text">
+          <string>n.b.</string>
          </property>
         </widget>
        </item>
        <item row="7" column="0">
-        <widget class="QLineEdit" name="lineEdit_20"/>
+        <widget class="QLineEdit" name="lineEdit_20">
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
-       <item row="8" column="0">
-        <widget class="QLineEdit" name="lineEdit_21"/>
+       <item row="5" column="0">
+        <widget class="QLineEdit" name="lineEdit_18">
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
        <item row="6" column="0">
-        <widget class="QLineEdit" name="lineEdit_19"/>
+        <widget class="QLineEdit" name="lineEdit_19">
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
-       <item row="9" column="0" colspan="2">
-        <widget class="QPushButton" name="pushButton_16">
+       <item row="10" column="0">
+        <widget class="QPushButton" name="stopButton_UEB_status">
          <property name="text">
-          <string>PushButton</string>
+          <string>Motor STOP</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLabel" name="label_46">
+         <property name="text">
+          <string>Versorgungsspannung (V)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="8" column="1">
+        <widget class="QLabel" name="label_39">
+         <property name="text">
+          <string>n.b.</string>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="0">
+        <widget class="QCheckBox" name="measureAtStartup_checkBox_UEB_status">
+         <property name="text">
+          <string>Messung bei Motorstart starten?</string>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="1">
+        <widget class="QPushButton" name="measurestartButton_UEB_status">
+         <property name="text">
+          <string>Messung starten</string>
          </property>
         </widget>
        </item>
@@ -173,7 +242,7 @@
        <property name="leftMargin">
         <number>10</number>
        </property>
-       <item row="0" column="0">
+       <item row="0" column="1">
         <widget class="PlotWidget" name="plotWidget_UEB_status_lower" native="true"/>
        </item>
       </layout>
@@ -188,7 +257,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>401</width>
+        <width>403</width>
         <height>541</height>
        </rect>
       </property>
@@ -196,127 +265,29 @@
        <property name="leftMargin">
         <number>10</number>
        </property>
-       <item row="16" column="0">
-        <widget class="QCheckBox" name="checkBox_2">
-         <property name="text">
-          <string>CheckBox</string>
+       <item row="13" column="0">
+        <widget class="QDoubleSpinBox" name="softstartD_SpinBox_UEB">
+         <property name="maximum">
+          <double>9999.000000000000000</double>
          </property>
         </widget>
        </item>
-       <item row="16" column="2">
-        <widget class="QLabel" name="label_27">
+       <item row="11" column="0">
+        <widget class="QCheckBox" name="softstart_checkBox_UEB">
          <property name="text">
-          <string>TextLabel</string>
+          <string/>
          </property>
         </widget>
        </item>
        <item row="14" column="0">
-        <widget class="QDoubleSpinBox" name="doubleSpinBox_15"/>
-       </item>
-       <item row="17" column="0">
-        <widget class="QCheckBox" name="checkBox_4">
+        <widget class="QCheckBox" name="dritteHarm_checkBox_UEB">
          <property name="text">
-          <string>CheckBox</string>
+          <string/>
          </property>
         </widget>
-       </item>
-       <item row="12" column="0">
-        <widget class="QDoubleSpinBox" name="doubleSpinBox_13"/>
        </item>
        <item row="10" column="0">
-        <widget class="QDoubleSpinBox" name="doubleSpinBox_11"/>
-       </item>
-       <item row="8" column="0">
-        <widget class="QDoubleSpinBox" name="doubleSpinBox_9"/>
-       </item>
-       <item row="18" column="2">
-        <widget class="QLabel" name="label_29">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="9" column="0">
-        <widget class="QDoubleSpinBox" name="doubleSpinBox_10"/>
-       </item>
-       <item row="18" column="0">
-        <widget class="QCheckBox" name="checkBox_3">
-         <property name="text">
-          <string>CheckBox</string>
-         </property>
-        </widget>
-       </item>
-       <item row="13" column="0">
-        <widget class="QDoubleSpinBox" name="doubleSpinBox_14"/>
-       </item>
-       <item row="11" column="0">
-        <widget class="QDoubleSpinBox" name="doubleSpinBox_12"/>
-       </item>
-       <item row="15" column="0">
-        <widget class="QDoubleSpinBox" name="doubleSpinBox_16"/>
-       </item>
-       <item row="17" column="2">
-        <widget class="QLabel" name="label_28">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="15" column="2">
-        <widget class="QLabel" name="label_30">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="14" column="2">
-        <widget class="QLabel" name="label_31">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="13" column="2">
-        <widget class="QLabel" name="label_32">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="12" column="2">
-        <widget class="QLabel" name="label_33">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="11" column="2">
-        <widget class="QLabel" name="label_34">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="10" column="2">
-        <widget class="QLabel" name="label_35">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="9" column="2">
-        <widget class="QLabel" name="label_36">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="8" column="2">
-        <widget class="QLabel" name="label_37">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
+        <widget class="QDoubleSpinBox" name="ausgangSp_SpinBox_UEB"/>
        </item>
        <item row="0" column="0" colspan="3">
         <widget class="QLabel" name="label_38">
@@ -331,6 +302,96 @@
          </property>
         </widget>
        </item>
+       <item row="8" column="0">
+        <widget class="QDoubleSpinBox" name="frequenz_SpinBox_UEB">
+         <property name="maximum">
+          <double>99999.000000000000000</double>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="0">
+        <widget class="QDoubleSpinBox" name="versorgSp_SpinBox_UEB"/>
+       </item>
+       <item row="16" column="0">
+        <widget class="QDoubleSpinBox" name="doubleSpinBox_16"/>
+       </item>
+       <item row="15" column="0">
+        <widget class="QDoubleSpinBox" name="pwmFrq_SpinBox_UEB">
+         <property name="maximum">
+          <double>99999.000000000000000</double>
+         </property>
+        </widget>
+       </item>
+       <item row="17" column="0">
+        <widget class="QPushButton" name="einstLesen_pushButton_UEB">
+         <property name="text">
+          <string>Einstellungen lesen</string>
+         </property>
+        </widget>
+       </item>
+       <item row="17" column="2">
+        <widget class="QPushButton" name="einst_Schreiben_pushButton_UEB">
+         <property name="text">
+          <string>Einstellungen schreiben</string>
+         </property>
+        </widget>
+       </item>
+       <item row="8" column="1">
+        <widget class="QLabel" name="label_37">
+         <property name="text">
+          <string>Frequenz (Hz)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="1">
+        <widget class="QLabel" name="label_36">
+         <property name="text">
+          <string>Versorgungsspannung (V)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="1">
+        <widget class="QLabel" name="label_35">
+         <property name="text">
+          <string>Ausgangsspannung (V)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="11" column="1">
+        <widget class="QLabel" name="label_34">
+         <property name="text">
+          <string>Softstart</string>
+         </property>
+        </widget>
+       </item>
+       <item row="13" column="1">
+        <widget class="QLabel" name="label_33">
+         <property name="text">
+          <string>Softstartdauer (s)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="14" column="1">
+        <widget class="QLabel" name="label_32">
+         <property name="text">
+          <string>Dritte Harmonische</string>
+         </property>
+        </widget>
+       </item>
+       <item row="15" column="1">
+        <widget class="QLabel" name="label_31">
+         <property name="text">
+          <string>PWM Frequenz (Hz)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="16" column="1">
+        <widget class="QLabel" name="label_30">
+         <property name="text">
+          <string>nicht benutzt</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="gridLayoutWidget_4">
@@ -342,29 +403,7 @@
         <height>541</height>
        </rect>
       </property>
-      <layout class="QGridLayout" name="gridLayout_4">
-       <item row="2" column="1">
-        <widget class="QPushButton" name="pushButton_13">
-         <property name="text">
-          <string>PushButton</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QPushButton" name="pushButton_12">
-         <property name="text">
-          <string>PushButton</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QPushButton" name="pushButton_11">
-         <property name="text">
-          <string>PushButton</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
+      <layout class="QGridLayout" name="gridLayout_4"/>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_3">
