--- a/ui_mainwindow.ui
+++ b/ui_mainwindow.ui
@@ -19,12 +19,12 @@
      <rect>
       <x>-4</x>
       <y>39</y>
-      <width>1151</width>
-      <height>581</height>
+      <width>1141</width>
+      <height>591</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>6</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -1349,6 +1349,263 @@ DOS mismatch threshold</string>
       </layout>
      </widget>
     </widget>
+    <widget class="QWidget" name="terminal">
+     <attribute name="title">
+      <string>Terminal</string>
+     </attribute>
+     <widget class="QWidget" name="verticalLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>1141</width>
+        <height>551</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QScrollArea" name="terminal_scrollArea">
+         <property name="verticalScrollBarPolicy">
+          <enum>Qt::ScrollBarAlwaysOn</enum>
+         </property>
+         <property name="horizontalScrollBarPolicy">
+          <enum>Qt::ScrollBarAsNeeded</enum>
+         </property>
+         <property name="widgetResizable">
+          <bool>true</bool>
+         </property>
+         <widget class="QWidget" name="scrollAreaWidgetContents">
+          <property name="geometry">
+           <rect>
+            <x>0</x>
+            <y>0</y>
+            <width>1120</width>
+            <height>520</height>
+           </rect>
+          </property>
+          <widget class="QLabel" name="terminal_textlabel">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>1131</width>
+             <height>511</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>TextLabel</string>
+           </property>
+          </widget>
+         </widget>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="terminal_userline"/>
+       </item>
+      </layout>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="transmissionControl">
+     <attribute name="title">
+      <string>Übertragungseinstellungen</string>
+     </attribute>
+     <widget class="QWidget" name="gridLayoutWidget_9">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>10</y>
+        <width>1131</width>
+        <height>551</height>
+       </rect>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_9">
+       <property name="leftMargin">
+        <number>10</number>
+       </property>
+       <item row="2" column="1">
+        <widget class="QPushButton" name="loadTransmissionparameter_pushButton">
+         <property name="text">
+          <string>Einstellungen laden</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1" colspan="2">
+        <widget class="QLabel" name="label_55">
+         <property name="text">
+          <string>Name in .csv Datei</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QPushButton" name="saveTransmissionparameter_pushButton">
+         <property name="text">
+          <string>Einstellungen speichern</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="2" colspan="2">
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_29">
+         <property name="text">
+          <string>Hex Zahl(FF)                            </string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
+        <widget class="QLabel" name="label_56">
+         <property name="text">
+          <string>Datengröße (uint8_t)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0" colspan="4">
+        <widget class="QScrollArea" name="scrollArea">
+         <property name="verticalScrollBarPolicy">
+          <enum>Qt::ScrollBarAlwaysOn</enum>
+         </property>
+         <property name="widgetResizable">
+          <bool>true</bool>
+         </property>
+         <widget class="QWidget" name="scrollAreaWidgetContents_2">
+          <property name="geometry">
+           <rect>
+            <x>0</x>
+            <y>0</y>
+            <width>1101</width>
+            <height>495</height>
+           </rect>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_10">
+           <item row="1" column="1">
+            <widget class="QLineEdit" name="csv0">
+             <property name="text">
+              <string>Test</string>
+             </property>
+            </widget>
+           </item>
+           <item row="11" column="1">
+            <widget class="QLineEdit" name="csv10"/>
+           </item>
+           <item row="9" column="0">
+            <widget class="QLineEdit" name="hex8"/>
+           </item>
+           <item row="2" column="1">
+            <widget class="QLineEdit" name="csv1"/>
+           </item>
+           <item row="4" column="1">
+            <widget class="QLineEdit" name="csv3"/>
+           </item>
+           <item row="5" column="1">
+            <widget class="QLineEdit" name="csv4"/>
+           </item>
+           <item row="7" column="1">
+            <widget class="QLineEdit" name="csv6"/>
+           </item>
+           <item row="4" column="0">
+            <widget class="QLineEdit" name="hex3"/>
+           </item>
+           <item row="8" column="0">
+            <widget class="QLineEdit" name="hex7"/>
+           </item>
+           <item row="10" column="0">
+            <widget class="QLineEdit" name="hex9"/>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLineEdit" name="hex2"/>
+           </item>
+           <item row="3" column="1">
+            <widget class="QLineEdit" name="csv2"/>
+           </item>
+           <item row="9" column="1">
+            <widget class="QLineEdit" name="csv8"/>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLineEdit" name="hex1"/>
+           </item>
+           <item row="10" column="1">
+            <widget class="QLineEdit" name="csv9"/>
+           </item>
+           <item row="11" column="0">
+            <widget class="QLineEdit" name="hex10"/>
+           </item>
+           <item row="6" column="1">
+            <widget class="QLineEdit" name="csv5"/>
+           </item>
+           <item row="7" column="0">
+            <widget class="QLineEdit" name="hex6"/>
+           </item>
+           <item row="6" column="0">
+            <widget class="QLineEdit" name="hex5"/>
+           </item>
+           <item row="8" column="1">
+            <widget class="QLineEdit" name="csv7"/>
+           </item>
+           <item row="5" column="0">
+            <widget class="QLineEdit" name="hex4"/>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLineEdit" name="hex0">
+             <property name="text">
+              <string>fe</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="2">
+            <widget class="QLineEdit" name="dataformat0">
+             <property name="text">
+              <string>str</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="2">
+            <widget class="QLineEdit" name="dataformat1"/>
+           </item>
+           <item row="3" column="2">
+            <widget class="QLineEdit" name="dataformat2"/>
+           </item>
+           <item row="4" column="2">
+            <widget class="QLineEdit" name="dataformat3"/>
+           </item>
+           <item row="5" column="2">
+            <widget class="QLineEdit" name="dataformat4"/>
+           </item>
+           <item row="6" column="2">
+            <widget class="QLineEdit" name="dataformat5"/>
+           </item>
+           <item row="7" column="2">
+            <widget class="QLineEdit" name="dataformat6"/>
+           </item>
+           <item row="8" column="2">
+            <widget class="QLineEdit" name="dataformat7"/>
+           </item>
+           <item row="9" column="2">
+            <widget class="QLineEdit" name="dataformat8"/>
+           </item>
+           <item row="10" column="2">
+            <widget class="QLineEdit" name="dataformat9"/>
+           </item>
+           <item row="11" column="2">
+            <widget class="QLineEdit" name="dataformat10"/>
+           </item>
+          </layout>
+         </widget>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </widget>
    </widget>
    <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
@@ -1462,7 +1719,7 @@ DOS mismatch threshold</string>
      <x>0</x>
      <y>0</y>
      <width>1199</width>
-     <height>30</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
